# hyprwhspr-rs-multilanguage

./: CHANGELOG.md  Cargo.toml  README.md
config/: schema.json
docs/examples/: README.md
docs/examples/quickshell/: HyprwhsprStatus.qml  README.md
src/: config.rs
src/transcription/: audio.rs  custom_openai.rs  mod.rs
src/whisper/: manager.rs
tests/: config_serialization.rs  custom_provider_config.rs  custom_provider_sources.rs  custom_whisper_cpp_server.rs
