[package]
name = "hyprwhspr-rs"
version = "0.3.26"
edition = "2021"
authors = ["hyprwhspr-rs contributors"]
description = "Native speech-to-text voice dictation for Hyprland (Rust implementation)"
license = "MIT"
repository = "https://github.com/better-slop/hyprwhspr-rs"
homepage = "https://github.com/better-slop/hyprwhspr-rs"
documentation = "https://github.com/better-slop/hyprwhspr-rs#readme"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonc-parser = { version = "0.26.3", features = ["serde"] }

# HTTP & async utilities
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
bytes = "1"
base64 = "0.21"

# Error handling
anyhow = "1"

# Audio
cpal = "0.15"
rodio = "0.17"
earshot = "0.1"

# Input
evdev = "0.12"
udev = "0.9.3"
arboard = { version = "3", features = ["wayland-data-control"] }
enigo = { version = "0.2", default-features = false, features = ["wayland"] }
libc = "0.2"
wl-clipboard-rs = "0.9"
wrtype = "0.1"

# Parakeet TDT (NVIDIA ASR)
parakeet-rs = { version = "0.3.4", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Paths & filesystem
directories = "5"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"

# Text processing
regex = "1"
similar = "2"
owo-colors = { version = "4", features = ["supports-colors"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
comfy-table = { version = "7.2", default-features = true, features = ["tty"] }

[features]
default = ["parakeet"]
parakeet = ["parakeet-rs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
